--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -14,6 +14,8 @@ roomKtx = "2.6.1"
 lifecycleViewModelCompose = "2.7.0"
 navigation = "2.7.7"
 materialIconsExtended = "1.6.7"
+tess-two = "9.1.0"
+
 
 
 
@@ -41,9 +43,11 @@ androidx-room-runtime = { group = "androidx.room", name = "room-runtime", versio
 androidx_room_ktx = { group = "androidx.room", name = "room-ktx", version = "2.6.1" }
 androidx-room-compiler = { group = "androidx.room", name = "room-compiler", version = "2.6.1" }
 gson = { group = "com.google.code.gson", name = "gson", version = "2.10.1" }
+tess-two = { group = "com.rmtheis", name = "tess-two", version.ref = "tess-two" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kotlin-compose = { id = "org.jetbrains.kotlin.plugin.compose", version = "2.0.0" }
 ksp = { id = "com.google.devtools.ksp", version = "1.0.20" }
+
