--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,10 +11,10 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/shot_sync_logo"
         android:label="@string/app_name"
         android:name=".CameraApplication"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/shot_sync_logo_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.SyncShot"
         tools:targetApi="31">
